--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@meforma/vue-toaster": "^1.3.0",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "search-dropdown-vue": "^1.0.2",
     "vue": "^3.2.13",
+    "vue-cookies": "^1.8.1",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
